feat(css): add css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,34 +1,19 @@
-.panel-workspace-indicator {
-  padding: 0 6px;
+.single-workspace {
+  margin: 0px 5px;
+  padding: 5px;
 }
 
-.panel-workspace-indicator-box {
-  padding: 2px 0;
+.single-workspace.active {
+  border: 2px solid red;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-radius: 5px;
 }
 
-.panel-workspace-indicator-box .workspace {
-  width: 40px;
+.single-workspace .app-icon {
+  height: 20px;
+  width: 20px;
+  padding: 0px 0px;
 }
 
-.panel-workspace-indicator,
-.panel-workspace-indicator-box .workspace {
-  border: 1px solid #cccccc;
-  background-color: transparent;
-  margin: 3px 3px;
-  border-radius: 3px;
-}
-
-.panel-workspace-indicator-box .workspace {
-  background-color: rgba(200, 200, 200, 0.3);
-  border-left-width: 0;
-  border-radius: 3px;
-}
-
-.panel-workspace-indicator-box .workspace:first-child {
-  border-left-width: 1px;
-  border-radius: 3px;
-}
-
-.workspace-indicator-active {
-  background-color: rgba(200, 20, 20, 0.5);
-}
