--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,26 @@
 .workspace {
   margin: 0px 5px;
-  border: 2px solid transparent;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  border-radius: 5px;
 }
 
-.active {
+.workspace.active {
+  border-radius: 5px;
   border: 2px solid white;
   border-top: none;
-  border-right: none;
   border-left: none;
+  border-right: none;
 }
 
-.workspace-text {
+.text {
   padding: 5px;
   color: rgb(110, 110, 110);
   font-size: 12px;
 }
 
-.active-workspace .workspace-text {
+.workspace.active .text {
   color: white;
 }
 
-.app-icon-active {
+.app.active {
   border-top: 2px solid white;
   border-radius: 5px;
 }
