feat(settings): add settings for `show-active-workspace-indicator`

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,8 @@
   font-size: 12px;
 }
 
-.workspace.active .text {
+.workspace.active .text,
+.workspace.active-no-indicator .text {
   color: white;
 }
 
