feat(settings): add workspace horizontal spacing settings (#87)

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -34,11 +34,9 @@
 }
 
 /* --- workspace indicator --- */
+/* workspace horizontal spacing is managed by spacing-workspace-{left, right} setttings */
 .wboa-workspace {
   border: none;
-  /* space horizontally indicators */
-  margin-left: 2px;
-  margin-right: 2px;
 }
 
 /* --- workspace label --- */
